--- a/src/index.scss
+++ b/src/index.scss
@@ -31,5 +31,118 @@ body {
       color: var(--text-color);
       text-decoration: none;
   }
+  
+  .navbar{
+      height: var(--nav-size);
+      background-color:  var(--bg);
+      padding:  0 1rem;
+      display: flex;
+      justify-content: flex-end;
+      .navbar__ul{
+        display: flex;
+          justify-content: flex-end;    
+      }
+      .navbar__item{
+          width: calc(var(--nav-size) * 0.8);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .navbar__item__a{
+             --button-size: calc(var(--nav-size) * 0.5);
+             width: var(--button-size);
+             height: var(--button-size);
+             background-color: #484a4d;
+             border-radius: 50%;
+             padding: 5px;;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             transition: filter 300ms;
+             &:hover{
+                 filter: brightness(1.2);
+             }
+          }
+      }
+  }
+  .dropdown{
+      position: absolute;
+      top:58px;
+      width: 300px;
+      transform: translateX(-45%);
+      background-color: var(--bg);
+      border: var(--border);; 
+      border-radius: var(--border-radius);
+      padding: 1rem;
+      overflow: hidden;
+      transition: height var(--speed) ease;
+  }
+  .menu__item{
+      height: 50px;
+      display: flex;
+      align-items: center;
+      border-radius: var(--border-radius);
+      transition: background var(--speed);
+      padding: 0 0.5rem;
+      &:hover{
+          background-color: #525357;
+      }
+  }
+  .icon-right{
+      
+      margin-left:auto;
+  }
+  .icon-button{
+    --button-size: calc(var(--nav-size) * 0.5);
+    width: var(--button-size);
+    height: var(--button-size);
+    background-color: #484a4d;
+    border-radius: 50%;
+    padding: 5px;;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: filter 300ms;
+    &:hover{
+        filter: brightness(1.2);
+    }
+  }
+
+   .menu{
+       width: 100%;
+   }
+
+   .menu-primary-enter{
+       transform: translateX(-110%);
+   }
+   .menu-primary-enter-active{
+       transform: translateX(0%);
+       transition:  all var(--speed) ease;
+   }
+   
+   .menu-primary-exit{
+       position: absolute;
+   }
+   .menu-primary-exit-active{
+       transform: translateX(-110%);
+       transition:  all var(--speed) ease;
+   }
+
+   .menu-secondary-enter{
+       transform: translateX(110%);
+   }
+   .menu-secondary-enter-active{
+       transform: translateX(0%);
+       transition:  all var(--speed) ease;
+   }
+   
+   .menu-secondary-exit{
+       position: absolute;
+   }
+   .menu-secondary-exit-active{
+       transform: translateX(110%);
+       transition:  all var(--speed) ease;
+   }
+   
+    
  
   
